--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  @apply bg-slate-300;
 }
 
 a {
@@ -17,7 +18,9 @@ a {
 * {
   box-sizing: border-box;
 }
-
+.cardhover {
+  @apply transition-all  rounded-lg shadow-lg hover:shadow-2xl;
+}
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
