--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,7 @@ body {
 @layer base {
   html,
   body {
-    @apply bg-[#FEF9EF] dark:bg-[#132E32] dark:text-[#EE8434] text-gray-700;
+    /* @apply bg-[#FEF9EF] dark:bg-[#132E32] dark:text-[#EE8434] text-gray-700; */
   }
 }
 
